tests/paczka1/small_fuzzy/42485393.err
Error in line 2: oOP A333 41,7
Error in line 6: KMSWU9X S89 78,52
Error in line 7: S89 A662 10,3
Error in line 3: KMSWU9X A333 62,3
